--- a/table/2.html
+++ b/table/2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>三阶速拧</title>
+  <title>二阶速拧</title>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -20,18 +20,18 @@
                       
   <fieldset class="layui-elem-field site-demo-button">
 
-                  <a href="https://cubingchina.com/results/rankings?region=China&event=333&gender=all&type=single">
-                    <button type="button" class="layui-btn layui-btn-radius layui-btn-lg">中国三阶单次排名</button></a>
-                    <a href="https://cubingchina.com/results/rankings?region=China&event=333&gender=all&type=average">
-                      <button type="button" class="layui-btn layui-btn-radius layui-btn-lg">中国三阶平均排名</button></a>
+                  <a href="https://cubingchina.com/results/rankings?region=China&event=222&gender=all&type=single">
+                    <button type="button" class="layui-btn layui-btn-radius layui-btn-lg">中国二阶单次排名</button></a>
+                    <a href="https://cubingchina.com/results/rankings?region=China&event=222&gender=all&type=average">
+                      <button type="button" class="layui-btn layui-btn-radius layui-btn-lg">中国二阶平均排名</button></a>
 
 
-                      <a href="https://cubingchina.com/results/rankings?region=World&event=333&gender=all&type=average">
+                      <a href="https://cubingchina.com/results/rankings?region=World&event=222&gender=all&type=average">
                         <button type="button" class="layui-btn layui-btn-normal layui-btn-radius layui-btn-lg" 
-                        style="float:right">世界三阶平均排名</button></a>
-                  <a href="https://cubingchina.com/results/rankings?region=World&event=333&gender=all&type=single">
+                        style="float:right">世界二阶平均排名</button></a>
+                  <a href="https://cubingchina.com/results/rankings?region=World&event=222&gender=all&type=single">
                     <button type="button" class="layui-btn layui-btn-normal layui-btn-radius layui-btn-lg" 
-                    style="float:right">世界三阶单次排名</button></a>
+                    style="float:right">世界二阶单次排名</button></a>
 
 
   </fieldset>
@@ -52,7 +52,7 @@
           table.render({
             elem: '#cuberank',
             toolbar:'true',
-            url:'../user/3.json',
+            url:'../user/2.json',
             initSort: {
                   field: 'single' //排序字段，对应 cols 设定的各字段名
                   ,type: 'asc' //排序方式  asc: 升序、desc: 降序、null: 默认排序
