--- a/table/3.html
+++ b/table/3.html
@@ -52,6 +52,7 @@
           table.render({
             elem: '#cuberank',
             toolbar:'true',
+            url:'../user/3.json',
             initSort: {
                   field: 'single' //排序字段，对应 cols 设定的各字段名
                   ,type: 'asc' //排序方式  asc: 升序、desc: 降序、null: 默认排序
@@ -63,252 +64,7 @@
               ,{field: 'avg', title: '平均', align:"center",sort:true}
               ,{title: '操作',  toolbar:'#ListBar',fixed:"right",align:"center"}
             ]]
-            ,data: [{
-
-              "username": "杨宇煌"
-              ,"single": 7.94
-              ,"avg": 9.59
-              ,"wcaid": "2017YANG16"
-            }, {
-             "username": "彭伟聪"
-              ,"single": 9.03
-              ,"avg": 10.22
-              ,"wcaid": "2015PENG05"
-            }, {"username": "曹熙梓"
-              ,"single": 9.44
-              ,"avg": 11.25
-              ,"wcaid": "2018CAOX02"
-            }, {
-              "username": "钟宇平"
-              ,"single": 9.66
-              ,"avg": 13.22
-              ,"wcaid": "2019ZHON23"},{
-              "username": "罗绿翔"
-              ,"single": 9.81
-              ,"avg": 11.18
-              ,"wcaid": "2018LUOL03"
-            }, {
-              "username": "黄回君"
-              ,"single": 9.83
-              ,"avg": 12.07
-              ,"wcaid": "2015HUAN39"
-            }, {"username": "李宇威"
-              ,"single": 11.02
-              ,"avg": 13.71
-              ,"wcaid": "2018LIYU18"
-            }, {
-              "username": "温正烨"
-              ,"single": 11.13
-              ,"avg": 16.53
-              ,"wcaid": "2019WENZ02"},{
-              "username": "钟俊威"
-              ,"single": 11.36
-              ,"avg": 13.46
-              ,"wcaid": "2019ZHON20"
-            }, {
-              "username": "石航懿"
-              ,"single": 11.42
-              ,"avg": 16.43
-              ,"wcaid": "2019SHIH06"
-            }, {"username": "罗崇"
-              ,"single": 11.67
-              ,"avg": 15.24
-              ,"wcaid": "2018LUOC05"
-            }, {
-              "username": "刘杰"
-              ,"single": 12.30
-              ,"avg": 13.71
-              ,"wcaid": "2018LIUJ23"},{
-             "username": "胡宇韬"
-              ,"single": 12.56
-              ,"avg": 14.94
-              ,"wcaid": "2018HUYU04"
-            }, {
-              "username": "余雷"
-              ,"single": 13.09
-              ,"avg": 16.15
-              ,"wcaid": "2015YULE01"
-            }, {"username": "钟凯文"
-              ,"single": 13.18
-              ,"avg": 15.51
-              ,"wcaid": "2015ZHON03"
-            }, {
-              "username": "邓松涛"
-              ,"single": 13.32
-              ,"avg": 15.64
-              ,"wcaid": "2018DENG16"},{
-              "username": "张威"
-              ,"single": 13.43
-              ,"avg": 17.17
-              ,"wcaid": "2019ZHAN10"
-            }, {
-              "username": "王华斌"
-              ,"single": 13.51
-              ,"avg": 15.59
-              ,"wcaid": "2016WANH14"
-            }, {"username": "罗佳辉"
-              ,"single": 13.56
-              ,"avg": 17.24
-              ,"wcaid": "2017LUOJ03"
-            }, {
-              "username": "罗益浩"
-              ,"single": 13.58
-              ,"avg": 19.00
-              ,"wcaid": "2017LUOY03"},{
-              "username": "张梓壑"
-              ,"single": 13.86
-              ,"avg": 17.60
-              ,"wcaid": "2018ZHAZ11"
-            }, {
-              "username": "谢佳豪"
-              ,"single": 13.93
-              ,"avg": 15.80
-              ,"wcaid": "2018XIEJ03"
-            }, 
-            {
-              "username": "刘斯哲"
-              ,"single": 14.05
-              ,"avg": 17.54
-              ,"wcaid": "2010LIUS02"
-            }, {
-              "username": "廖昱棋"
-              ,"single": 14.95
-              ,"avg": 17.37
-              ,"wcaid": "2019LIAO10"
-            }, {
-              "username": "操源"
-              ,"single": 14.98
-              ,"avg": 18.81
-              ,"wcaid": "2016CAOY01"
-            }, {
-              "username": "魏庆伟"
-              ,"avg": 17.21
-              ,"wcaid": "2018WEIQ01"
-            }, {
-              "username": "魏桂兴"
-              ,"single": 15.39
-              ,"avg": 19.46
-              ,"wcaid": "2019WEIG01"
-            }, {
-              "username": "伍凌枫"
-              ,"single": 16.05
-              ,"avg": 19.68
-              ,"wcaid": "2018WULI04"
-            }, {
-              "username": "温鹏锋"
-              ,"single": 16.42
-              ,"avg": 17.68
-              ,"wcaid": "2018WENP02"
-            }, {
-              "username": "罗烽骅"
-              ,"single": 16.51
-              ,"avg": 23.20
-              ,"wcaid": "2018LUOF01"
-            }, 
-            {
-              "username": "蔡彦"
-              ,"single": 17.16
-              ,"avg": 21.26
-              ,"wcaid": "2009CAIY02"
-            }, {
-              "username": "罗亿军"
-              ,"single": 17.52
-              ,"avg": 18.43
-              ,"wcaid": "2018LUOY07"
-            }, 
-            {
-              "username": "黄伟燊"
-              ,"single": 17.67
-              ,"avg": 19.80
-              ,"wcaid": "2018HUAN70"
-            }, {
-              "username": "梁永波"
-              ,"single": 18.57
-              ,"avg": 21.52
-              ,"wcaid": "2018LIAN27"
-            }, {
-              "username": "张羽骞"
-              ,"single": 18.61
-              ,"avg": 20.53
-              ,"wcaid": "2019ZHAY17"
-            }, {
-              "username": "王祉晗"
-              ,"single": 20.12
-              ,"avg": 21.13
-              ,"wcaid": "2018WANZ26"
-            }, {
-              "username": "汤彦燊"
-              ,"single": 20.72
-              ,"avg": 26.86
-              ,"wcaid": "2018TANG24"
-            }, {
-              "username": "钟维政"
-              ,"single": 21.23
-              ,"avg": 21.86
-              ,"wcaid": "2019ZHON22"
-            }, {
-              "username": "陈科林"
-              ,"single": 22.30
-              ,"avg": 25.22
-              ,"wcaid": "2018CHEK06"
-            }, {
-              "username": "杨白雪"
-              ,"single": 22.33
-              ,"avg": 26.74
-              ,"wcaid": "2018YANB01"
-            }, 
-            {
-              "username": "李一玄"
-              ,"single": 23.76
-              ,"avg": 27.72
-              ,"wcaid": "2019LIYI07"
-            }, {
-              "username": "谢迅权"
-              ,"single": 24.23
-              ,"avg": 33.24
-              ,"wcaid": "2018XIEX01"
-            }, 
-            {
-              "username": "郑炯熙"
-              ,"single": 28.70
-              ,"avg": 32.10
-              ,"wcaid": "2019ZHEN42"
-            }, {
-              "username": "张栋汕"
-              ,"single": 28.91
-              ,"avg": 37.30
-              ,"wcaid": "2018ZHAD08"
-            }, {
-              "username": "陈浩鑫"
-              ,"single": 36.27
-              ,"avg": 42.40
-              ,"wcaid": "2019CHEH04"
-            }, {
-              "username": "李锐君"
-              ,"single": 36.59
-              ,"avg": 41.07
-              ,"wcaid": "2019LIRU03"
-            }, {
-              "username": "杨恒"
-              ,"single": 37.60
-              ,"avg": 45.18
-              ,"wcaid": "2019YANH04"
-            }, {
-              "username": "谢沁润"
-              ,"single": 41.86
-              ,"avg": 49.72
-              ,"wcaid": "2019XIEQ03"
-            }, {
-              "username": "唐梓泓"
-              ,"single": 42.69
-              ,"avg": 50.21
-              ,"wcaid": "2019TANG22"
-            }, {
-              "username": "聂伟"
-              ,"single": 55.51
-              ,"avg": 71.07
-              ,"wcaid": "2018NIEW03"
-            }, 
+            ,data: [
             ]
             //,skin: 'line' //表格风格
             ,even: true
