--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
       .frame {
           position: absolute;
           width: 100%;
-          
-          height: 1000%;
+
+
+          height: 100%;
       }
   </style>
 
 
 <style type="text/css">
   ul{bottom: 0; top: 0;}
-  .main{margin-left: 200px; position: absolute; right: 0; left: 0;}
+  .main{margin-left: 200px;position: absolute;right:0;left:0;height:100%;}
   .main #view1{width: 93%; position: relative;}
   .main > button{margin-left: 20px; margin-top: 20px;}
   .layui-layer-tips .layui-layer-content{
@@ -107,18 +108,22 @@
 		
 		<div class="main dynamic-navigation" style="left: 0px;">
 			<button class="layui-btn layui-btn-primary"><i class="layui-icon"></i></button>
-      <div class=" show-frame " style="width:100%;height: 100%;"></div>
+
           <div class="layui-tab layui-tab-brief" lay-allowClose="true" lay-filter="empTab">
           <ul class="layui-tab-title">
               <li class="layui-this "><i class="layui-icon">&#xe68e欢迎访问</i></li>
           </ul>
           <div class="layui-tab-content">
-              <div class="layui-tab-item layui-show"><h1 style="color: #5FB878">欢迎访问MZrank</h1></div>
+              <div class="layui-tab-item layui-show"><h1 style="color: #5FB878">欢迎访问MZrank</h1>
+              </div>
+
+              
           </div>
-      </div>
+
+    </div>
     </div>
 
-</div>
+
 
 <script src=".\layui\layui.all.js"></script>
 <!--
