--- a/table/3wf.html
+++ b/table/3wf.html
@@ -68,7 +68,7 @@
             ]
             //,skin: 'line' //表格风格
             ,even: true
-           // ,page: true //是否显示分页
+           ,page: false //是否显示分页
             ,limits: [10, 20,50]
             ,limit: 20 //每页默认显示的数量
           });
