--- a/table/mbf.html
+++ b/table/mbf.html
@@ -58,7 +58,7 @@
                   ,type: 'asc' //排序方式  asc: 升序、desc: 降序、null: 默认排序
                       }           
             ,cols: [[ //标题栏
-              {field: 'rank', title: '排名',  sort: true,type:'numbers',align:"center",fixed:"left",width:70}
+              {field: 'rank', title: '排名',type:'numbers',align:"center",fixed:"left",width:70}
               ,{field: 'username', title: '姓名',align:"center"}
               ,{field: 'single', title: '单次', align:"center",sort:true}
               ,{field: 'avg', title: '平均', align:"center",sort:true}
