--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   
 
-    <ul class="layui-nav layui-nav-tree layui-nav-side dynamic-navigation" lay-filter="test" style="position: fixed; left: 0px;"> 
+    <ul class="layui-nav layui-nav-tree layui-nav-side dynamic-navigation" lay-filter="test" style="position: absolute; left: 0px;"> 
 
 
       <!-- 侧边导航: <ul class="layui-nav layui-nav-tree layui-nav-side"> -->
