--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       .show-frame {
           top: 10px!important;
+          overflow: hidden;
           /*默认.layui-layout-admin .layui-body {
               top: 60px;
               bottom: 44px;
@@ -68,7 +69,7 @@
 
   
 
-    <ul class="layui-nav layui-nav-tree layui-nav-side dynamic-navigation" lay-filter="test" style="position: absolute; left: 0px;"> 
+    <ul class="layui-nav layui-nav-tree layui-nav-side dynamic-navigation" lay-filter="test" style="position: fixed; left: 0px;"> 
 
 
       <!-- 侧边导航: <ul class="layui-nav layui-nav-tree layui-nav-side"> -->
